--- a/daily horoscope.html
+++ b/daily horoscope.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>今日の総合運</title>
+<title>数字の導き</title>
 <style>
   :root{
     --pp1:#ff8fab;   /* ピンク */
@@ -91,8 +91,8 @@
 </head>
 <body>
   <header>
-    <h1>今日の総合運</h1>
-    <p class="lead">誕生日×数秘×乱数で、星と短いメッセージをお届け。</p>
+    <h1>数字の導き</h1>
+    <p class="lead">数秘術であなたの今日の運勢を占います</p>
   </header>
 
   <main>
@@ -112,7 +112,7 @@
         <div id="stars" class="stars">★★★★★</div>
         <div id="message" class="msg"></div>
         <div id="meta" class="meta"></div>
-        <div class="meta" style="margin-top:8px">※エンタメ用途です。行動の最終判断はご自身で。</div>
+        <div class="meta" style="margin-top:8px">※数秘術を参考に占い結果を作成していますが、あくまでエンタメです。行動の最終判断はご自身で。</div>
       </div>
     </div>
   </main>
