--- a/index.html
+++ b/index.html
@@ -25,19 +25,27 @@
   /* 入力とボタンのレイアウト（重なり解消） */
   .row{
     display:grid; gap:12px; margin-bottom:12px;
-    grid-template-columns: 1fr auto; align-items:end;
+    grid-template-columns: minmax(280px, 1fr) auto; /* 入力の最小幅を確保 */
+    align-items:end;
   }
   @media (max-width:560px){
     .row{ grid-template-columns: 1fr; }
+    .btnwrap{ justify-self: start; }
   }
 
   label{font-size:14px;color:#444}
   input[type="text"]{
     width:100%; padding:10px; border:1px solid #ccc; border-radius:8px; font-size:16px;
   }
-  .help{font-size:12px;color:#666;margin-top:4px}
+
+  /* ヘルプは2列ぶち抜き＝下段へ移動してボタンと重ならない */
+  .help{
+    grid-column: 1 / -1;
+    font-size:12px; color:#666; margin-top:4px;
+  }
 
   /* ピンク→パープルのグラデーションボタン（枠なし） */
+  .btnwrap{ align-self:end; justify-self:start; }
   button{
     padding:12px 24px; border:none; border-radius:28px;
     font-weight:700; font-size:16px; cursor:pointer;
@@ -50,7 +58,11 @@
   button:hover{ transform:translateY(-2px); filter:brightness(1.05); }
   button:active{ transform:translateY(0); }
 
-  .result{position:relative;margin-top:16px;padding:16px;border:1px solid #eee;border-radius:10px;background:#fafafa;overflow:hidden}
+  .result{
+    position:relative;margin-top:16px;padding:16px;border:1px solid #eee;border-radius:10px;
+    background:#fafafa;overflow:hidden
+  }
+
   /* ★をピンク→パープルの文字グラデで */
   .stars{
     font-size:30px; letter-spacing:2px; line-height:1;
@@ -103,7 +115,8 @@
           <input id="bday" type="text" inputmode="numeric" placeholder="1990-01-01" maxlength="10">
           <div class="help">※数字8桁（例: 19900101）でもOK。自動で 1990-01-01 に整形します。</div>
         </div>
-        <div>
+
+        <div class="btnwrap">
           <button id="go" type="button">結果を見る</button>
         </div>
       </div>
@@ -123,9 +136,9 @@
   bdayEl.addEventListener('input', () => {
     let digits = bdayEl.value.replace(/\D/g, '').slice(0, 8);
     let out = '';
-    if (digits.length <= 4) out = digits;
-    else if (digits.length <= 6) out = digits.slice(0,4) + '-' + digits.slice(4);
-    else out = digits.slice(0,4) + '-' + digits.slice(4,6) + '-' + digits.slice(6);
+    if (digits.length <= 4) out = digits;                                    // YYYY
+    else if (digits.length <= 6) out = digits.slice(0,4) + '-' + digits.slice(4); // YYYY-MM
+    else out = digits.slice(0,4) + '-' + digits.slice(4,6) + '-' + digits.slice(6); // YYYY-MM-DD
     bdayEl.value = out;
   });
 
@@ -166,11 +179,10 @@
   function starSymbols(n){ return "★★★★★".slice(0,n)+"☆☆☆☆☆".slice(0,5-n); }
 
   /* 小さなスパークを数粒生成（★5時） */
-  function spawnSparks(container, aroundEl){
+  function spawnSparks(aroundEl){
     const rect = aroundEl.getBoundingClientRect();
     const baseX = rect.left + rect.width * 0.8; // 右上あたり
     const baseY = rect.top + rect.height * 0.2;
-
     const count = 6;
     for(let i=0;i<count;i++){
       const s = document.createElement('span');
@@ -179,7 +191,6 @@
       const dy = (-Math.random()*30 - 10) + 'px';
       s.style.setProperty('--dx', dx);
       s.style.setProperty('--dy', dy);
-      // 絶対座標に配置
       s.style.left = (baseX + window.scrollX) + 'px';
       s.style.top  = (baseY + window.scrollY) + 'px';
       document.body.appendChild(s);
@@ -208,18 +219,17 @@
     const starsEl = document.getElementById('stars');
     starsEl.textContent = starSymbols(stars);
     starsEl.classList.remove('shine');
-    // ★5のときだけキラッ
     if(stars===5){
-      // 再トリガーのため一旦強制再描画
-      void starsEl.offsetWidth;
-      starsEl.classList.add('shine');
-      spawnSparks(document.getElementById('out'), starsEl);
+      void starsEl.offsetWidth;        // 再トリガー
+      starsEl.classList.add('shine');  // シャイン
+      spawnSparks(starsEl);            // スパーク
     }
 
     document.getElementById('message').textContent = msg;
     document.getElementById('meta').textContent = `誕生日: ${bday} / 数秘: ${lp} / 日付: ${today}`;
   }
 
+  const bdayEl = document.getElementById('bday');
   document.getElementById('go').addEventListener('click', run);
   bdayEl.addEventListener('keydown', (e)=>{ if(e.key==='Enter') run(); });
 </script>
