--- a/index.html
+++ b/index.html
@@ -5,100 +5,67 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>数字の導き</title>
 <style>
-  :root{
-    --pp1:#ff8fab;   /* ピンク */
-    --pp2:#b57aff;   /* パープル */
-  }
-  body{
-    margin:0; background:#fff; color:#000;
-    font-family:system-ui,-apple-system,"Segoe UI",Roboto,Helvetica,Arial;
-  }
-  header{padding:24px 16px;text-align:center}
-  h1{margin:0 0 10px;font-size:24px}
-  p.lead{margin:0;color:#444}
-  main{max-width:680px;margin:0 auto;padding:16px}
-  .card{
-    background:#fff;border:1px solid #ddd;border-radius:12px;padding:20px;
-    box-shadow:0 4px 12px rgba(0,0,0,.08);
-  }
+  :root{ --pp1:#ff8fab; --pp2:#b57aff; }
+  body{ margin:0; background:#fff; color:#000; font-family:system-ui,-apple-system,"Segoe UI",Roboto,Helvetica,Arial; }
+  header{ padding:24px 16px; text-align:center }
+  h1{ margin:0 0 10px; font-size:24px }
+  p.lead{ margin:0; color:#444 }
+  main{ max-width:680px; margin:0 auto; padding:16px }
+  .card{ background:#fff; border:1px solid #ddd; border-radius:12px; padding:20px; box-shadow:0 4px 12px rgba(0,0,0,.08) }
 
   /* 入力とボタンのレイアウト（重なり解消） */
   .row{
     display:grid; gap:12px; margin-bottom:12px;
-    grid-template-columns: minmax(280px, 1fr) auto; /* 入力の最小幅を確保 */
-    align-items:end;
+    grid-template-columns:minmax(280px,1fr) auto; align-items:end;
   }
-  @media (max-width:560px){
-    .row{ grid-template-columns: 1fr; }
-    .btnwrap{ justify-self: start; }
-  }
+  @media (max-width:560px){ .row{ grid-template-columns:1fr } .btnwrap{ justify-self:start } }
 
-  label{font-size:14px;color:#444}
-  input[type="text"]{
-    width:100%; padding:10px; border:1px solid #ccc; border-radius:8px; font-size:16px;
-  }
+  label{ font-size:14px; color:#444 }
+  input[type="text"]{ width:100%; padding:10px; border:1px solid #ccc; border-radius:8px; font-size:16px }
 
   /* ヘルプは2列ぶち抜き＝下段へ移動してボタンと重ならない */
-  .help{
-    grid-column: 1 / -1;
-    font-size:12px; color:#666; margin-top:4px;
-  }
+  .help{ grid-column:1 / -1; font-size:12px; color:#666; margin-top:4px }
 
   /* ピンク→パープルのグラデーションボタン（枠なし） */
-  .btnwrap{ align-self:end; justify-self:start; }
+  .btnwrap{ align-self:end; justify-self:start }
   button{
-    padding:12px 24px; border:none; border-radius:28px;
-    font-weight:700; font-size:16px; cursor:pointer;
+    padding:12px 24px; border:none; border-radius:28px; font-weight:700; font-size:16px; cursor:pointer;
     background:linear-gradient(135deg,var(--pp1),var(--pp2)); color:#fff;
     text-shadow:0 1px 2px rgba(0,0,0,.25);
     box-shadow:0 6px 14px rgba(181,122,255,.35), inset 0 1px 3px rgba(255,255,255,.6);
-    transition:transform .2s ease, box-shadow .2s ease, filter .2s ease;
-    white-space:nowrap;
+    transition:transform .2s ease, box-shadow .2s ease, filter .2s ease; white-space:nowrap;
   }
-  button:hover{ transform:translateY(-2px); filter:brightness(1.05); }
-  button:active{ transform:translateY(0); }
+  button:hover{ transform:translateY(-2px); filter:brightness(1.05) }
+  button:active{ transform:translateY(0) }
 
-  .result{
-    position:relative;margin-top:16px;padding:16px;border:1px solid #eee;border-radius:10px;
-    background:#fafafa;overflow:hidden
-  }
-
-  /* ★をピンク→パープルの文字グラデで */
+  .result{ position:relative; margin-top:16px; padding:16px; border:1px solid #eee; border-radius:10px; background:#fafafa; overflow:hidden }
   .stars{
     font-size:30px; letter-spacing:2px; line-height:1;
     background:linear-gradient(90deg,var(--pp1),var(--pp2));
     -webkit-background-clip:text; background-clip:text; -webkit-text-fill-color:transparent;
     display:inline-block; position:relative;
   }
-
   /* ★5でキラッ：シャイン＆スパーク */
   .shine::after{
     content:""; position:absolute; left:-10%; top:0; width:40%; height:100%;
     background:linear-gradient(120deg, rgba(255,255,255,0) 0%, rgba(255,255,255,.85) 50%, rgba(255,255,255,0) 100%);
-    transform:skewX(-20deg) translateX(-120%);
-    animation:shine-sweep 900ms ease-out 1;
-    pointer-events:none;
+    transform:skewX(-20deg) translateX(-120%); animation:shine-sweep 900ms ease-out 1; pointer-events:none;
   }
   @keyframes shine-sweep{
-    0%{ transform:skewX(-20deg) translateX(-120%); opacity:.0 }
-    20%{ opacity:1 }
+    0%{ transform:skewX(-20deg) translateX(-120%); opacity:0 } 20%{ opacity:1 }
     100%{ transform:skewX(-20deg) translateX(260%); opacity:0 }
   }
   .spark{
     position:absolute; width:8px; height:8px; border-radius:50%;
-    background:radial-gradient(circle, #fff 0%, #ffd6f0 60%, rgba(255,255,255,0) 70%);
-    filter:drop-shadow(0 0 6px #ffd6f0);
-    animation:spark-pop 700ms ease-out forwards;
-    pointer-events:none;
+    background:radial-gradient(circle,#fff 0%,#ffd6f0 60%,rgba(255,255,255,0) 70%);
+    filter:drop-shadow(0 0 6px #ffd6f0); animation:spark-pop 700ms ease-out forwards; pointer-events:none;
   }
   @keyframes spark-pop{
-    0%{ transform:scale(.4); opacity:0 }
-    20%{ opacity:1 }
+    0%{ transform:scale(.4); opacity:0 } 20%{ opacity:1 }
     100%{ transform:translate(var(--dx), var(--dy)) scale(1); opacity:0 }
   }
-
-  .msg{margin-top:10px;font-size:18px;color:#111}
-  .meta{color:#555;font-size:12px;margin-top:6px}
+  .msg{ margin-top:10px; font-size:18px; color:#111 }
+  .meta{ color:#555; font-size:12px; margin-top:6px }
 </style>
 </head>
 <body>
@@ -115,7 +82,6 @@
           <input id="bday" type="text" inputmode="numeric" placeholder="1990-01-01" maxlength="10">
           <div class="help">※数字8桁（例: 19900101）でもOK。自動で 1990-01-01 に整形します。</div>
         </div>
-
         <div class="btnwrap">
           <button id="go" type="button">結果を見る</button>
         </div>
@@ -131,12 +97,15 @@
   </main>
 
 <script>
-  /* 入力：数字のみ→YYYY-MM-DDに自動整形（年は必ず4桁） */
+document.addEventListener('DOMContentLoaded', () => {
   const bdayEl = document.getElementById('bday');
+  const goBtn  = document.getElementById('go');
+
+  /* 入力：数字のみ→YYYY-MM-DDに自動整形（年は必ず4桁） */
   bdayEl.addEventListener('input', () => {
     let digits = bdayEl.value.replace(/\D/g, '').slice(0, 8);
     let out = '';
-    if (digits.length <= 4) out = digits;                                    // YYYY
+    if (digits.length <= 4) out = digits;                                      // YYYY
     else if (digits.length <= 6) out = digits.slice(0,4) + '-' + digits.slice(4); // YYYY-MM
     else out = digits.slice(0,4) + '-' + digits.slice(4,6) + '-' + digits.slice(6); // YYYY-MM-DD
     bdayEl.value = out;
@@ -151,7 +120,7 @@
            dt.getUTCFullYear()===y && dt.getUTCMonth()+1===m && dt.getUTCDate()===d;
   }
 
-  /* 乱数と数秘 */
+  /* 疑似乱数＆数秘 */
   function stringHash(str){let h=2166136261>>>0;for(let i=0;i<str.length;i++){h^=str.charCodeAt(i);h=Math.imul(h,16777619)>>>0;}return h>>>0;}
   function mulberry32(a){return function(){a|=0;a=(a+0x6D2B79F5)|0;let t=Math.imul(a^a>>>15,1|a);t=(t+Math.imul(t^t>>>7,61|t))^t;return ((t^t>>>14)>>>0)/4294967296;}}
   function seededRandom(seedStr){return mulberry32(stringHash(seedStr));}
@@ -178,10 +147,9 @@
   }
   function starSymbols(n){ return "★★★★★".slice(0,n)+"☆☆☆☆☆".slice(0,5-n); }
 
-  /* 小さなスパークを数粒生成（★5時） */
   function spawnSparks(aroundEl){
     const rect = aroundEl.getBoundingClientRect();
-    const baseX = rect.left + rect.width * 0.8; // 右上あたり
+    const baseX = rect.left + rect.width * 0.8;
     const baseY = rect.top + rect.height * 0.2;
     const count = 6;
     for(let i=0;i<count;i++){
@@ -199,17 +167,15 @@
   }
 
   function run(){
-    const bday=bdayEl.value.trim();
+    const bday = bdayEl.value.trim();
     if(!isValidDateISO(bday)){
       alert('誕生日は YYYY-MM-DD（例：1990-01-01）で入力してください。');
       return;
     }
-
     const lp=lifePathFromDate(bday);
     const today=todayISOLocal();
     const seedStr=`${bday}|${today}`;
     const rand=seededRandom(seedStr);
-
     const stars=weightedChoice(rand);
     const idx=Math.floor(rand()*10);
     const msg=(BANK[stars]||[""])[idx]||"";
@@ -219,19 +185,15 @@
     const starsEl = document.getElementById('stars');
     starsEl.textContent = starSymbols(stars);
     starsEl.classList.remove('shine');
-    if(stars===5){
-      void starsEl.offsetWidth;        // 再トリガー
-      starsEl.classList.add('shine');  // シャイン
-      spawnSparks(starsEl);            // スパーク
-    }
+    if(stars===5){ void starsEl.offsetWidth; starsEl.classList.add('shine'); spawnSparks(starsEl); }
 
     document.getElementById('message').textContent = msg;
     document.getElementById('meta').textContent = `誕生日: ${bday} / 数秘: ${lp} / 日付: ${today}`;
   }
 
-  const bdayEl = document.getElementById('bday');
-  document.getElementById('go').addEventListener('click', run);
-  bdayEl.addEventListener('keydown', (e)=>{ if(e.key==='Enter') run(); });
+  goBtn.addEventListener('click', run);
+  bdayEl.addEventListener('keydown', e => { if(e.key==='Enter') run(); });
+});
 </script>
 </body>
 </html>
