--- a/index.html
+++ b/index.html
@@ -6,66 +6,60 @@
 <title>数字の導き</title>
 <style>
   :root{ --pp1:#ff8fab; --pp2:#b57aff; }
-  body{ margin:0; background:#fff; color:#000; font-family:system-ui,-apple-system,"Segoe UI",Roboto,Helvetica,Arial; }
-  header{ padding:24px 16px; text-align:center }
-  h1{ margin:0 0 10px; font-size:24px }
-  p.lead{ margin:0; color:#444 }
-  main{ max-width:680px; margin:0 auto; padding:16px }
-  .card{ background:#fff; border:1px solid #ddd; border-radius:12px; padding:20px; box-shadow:0 4px 12px rgba(0,0,0,.08) }
-
-  /* 入力とボタンのレイアウト（重なり解消） */
-  .row{
-    display:grid; gap:12px; margin-bottom:12px;
-    grid-template-columns:minmax(280px,1fr) auto; align-items:end;
+  body{
+    margin:0; background:#fff; color:#000;
+    font-family:system-ui,-apple-system,"Segoe UI",Roboto,Helvetica,Arial;
+    text-align:center; /* 全体中央揃え */
   }
-  @media (max-width:560px){ .row{ grid-template-columns:1fr } .btnwrap{ justify-self:start } }
+  header{padding:24px 16px;}
+  h1{margin:0 0 10px;font-size:24px}
+  p.lead{margin:0;color:#444}
+  main{max-width:680px;margin:0 auto;padding:16px}
 
-  label{ font-size:14px; color:#444 }
-  input[type="text"]{ width:100%; padding:10px; border:1px solid #ccc; border-radius:8px; font-size:16px }
+  .card{
+    background:#fff;border:1px solid #ddd;border-radius:12px;padding:20px;
+    box-shadow:0 4px 12px rgba(0,0,0,.08);
+    display:inline-block; /* 中央寄せ */
+    text-align:center;
+  }
 
-  /* ヘルプは2列ぶち抜き＝下段へ移動してボタンと重ならない */
-  .help{ grid-column:1 / -1; font-size:12px; color:#666; margin-top:4px }
+  label{font-size:14px;color:#444; display:block; margin-bottom:6px}
+  input[type="text"]{
+    width:80%; max-width:320px;
+    padding:10px; border:1px solid #ccc; border-radius:8px; font-size:16px;
+    text-align:center;
+  }
+  .help{font-size:12px;color:#666;margin-top:4px;margin-bottom:16px}
 
-  /* ピンク→パープルのグラデーションボタン（枠なし） */
-  .btnwrap{ align-self:end; justify-self:start }
+  /* ボタン */
   button{
-    padding:12px 24px; border:none; border-radius:28px; font-weight:700; font-size:16px; cursor:pointer;
+    padding:12px 32px; border:none; border-radius:28px;
+    font-weight:700; font-size:16px; cursor:pointer;
     background:linear-gradient(135deg,var(--pp1),var(--pp2)); color:#fff;
     text-shadow:0 1px 2px rgba(0,0,0,.25);
     box-shadow:0 6px 14px rgba(181,122,255,.35), inset 0 1px 3px rgba(255,255,255,.6);
-    transition:transform .2s ease, box-shadow .2s ease, filter .2s ease; white-space:nowrap;
+    transition:transform .2s ease, box-shadow .2s ease, filter .2s ease;
+    margin-top:8px;
   }
   button:hover{ transform:translateY(-2px); filter:brightness(1.05) }
   button:active{ transform:translateY(0) }
 
-  .result{ position:relative; margin-top:16px; padding:16px; border:1px solid #eee; border-radius:10px; background:#fafafa; overflow:hidden }
+  .result{
+    margin-top:20px;padding:16px;
+    border:1px solid #eee;border-radius:10px;
+    background:#fafafa; display:inline-block; text-align:center;
+    max-width:340px;
+  }
+
   .stars{
     font-size:30px; letter-spacing:2px; line-height:1;
     background:linear-gradient(90deg,var(--pp1),var(--pp2));
     -webkit-background-clip:text; background-clip:text; -webkit-text-fill-color:transparent;
     display:inline-block; position:relative;
   }
-  /* ★5でキラッ：シャイン＆スパーク */
-  .shine::after{
-    content:""; position:absolute; left:-10%; top:0; width:40%; height:100%;
-    background:linear-gradient(120deg, rgba(255,255,255,0) 0%, rgba(255,255,255,.85) 50%, rgba(255,255,255,0) 100%);
-    transform:skewX(-20deg) translateX(-120%); animation:shine-sweep 900ms ease-out 1; pointer-events:none;
-  }
-  @keyframes shine-sweep{
-    0%{ transform:skewX(-20deg) translateX(-120%); opacity:0 } 20%{ opacity:1 }
-    100%{ transform:skewX(-20deg) translateX(260%); opacity:0 }
-  }
-  .spark{
-    position:absolute; width:8px; height:8px; border-radius:50%;
-    background:radial-gradient(circle,#fff 0%,#ffd6f0 60%,rgba(255,255,255,0) 70%);
-    filter:drop-shadow(0 0 6px #ffd6f0); animation:spark-pop 700ms ease-out forwards; pointer-events:none;
-  }
-  @keyframes spark-pop{
-    0%{ transform:scale(.4); opacity:0 } 20%{ opacity:1 }
-    100%{ transform:translate(var(--dx), var(--dy)) scale(1); opacity:0 }
-  }
-  .msg{ margin-top:10px; font-size:18px; color:#111 }
-  .meta{ color:#555; font-size:12px; margin-top:6px }
+
+  .msg{margin-top:10px;font-size:18px;color:#111}
+  .meta{color:#555;font-size:12px;margin-top:6px}
 </style>
 </head>
 <body>
@@ -76,22 +70,19 @@
 
   <main>
     <div class="card">
-      <div class="row">
-        <div>
-          <label for="bday">誕生日（YYYY-MM-DD）</label>
-          <input id="bday" type="text" inputmode="numeric" placeholder="1990-01-01" maxlength="10">
-          <div class="help">※数字8桁（例: 19900101）でもOK。自動で 1990-01-01 に整形します。</div>
-        </div>
-        <div class="btnwrap">
-          <button id="go" type="button">結果を見る</button>
-        </div>
-      </div>
+      <label for="bday">誕生日（YYYY-MM-DD）</label>
+      <input id="bday" type="text" inputmode="numeric" placeholder="1990-01-01" maxlength="10">
+      <div class="help">※数字8桁（例: 19900101）でもOK。自動で 1990-01-01 に整形します。</div>
+
+      <button id="go" type="button">結果を見る</button>
 
       <div id="out" class="result" hidden>
         <div id="stars" class="stars">★★★★★</div>
         <div id="message" class="msg"></div>
         <div id="meta" class="meta"></div>
-        <div class="meta" style="margin-top:8px">※数秘術を参考に占い結果を作成していますが、あくまでエンタメです。行動の最終判断はご自身で。</div>
+        <div class="meta" style="margin-top:8px">
+          ※数秘術を参考に占い結果を作成していますが、あくまでエンタメです。行動の最終判断はご自身で。
+        </div>
       </div>
     </div>
   </main>
@@ -101,98 +92,58 @@ document.addEventListener('DOMContentLoaded', () => {
   const bdayEl = document.getElementById('bday');
   const goBtn  = document.getElementById('go');
 
-  /* 入力：数字のみ→YYYY-MM-DDに自動整形（年は必ず4桁） */
   bdayEl.addEventListener('input', () => {
     let digits = bdayEl.value.replace(/\D/g, '').slice(0, 8);
     let out = '';
-    if (digits.length <= 4) out = digits;                                      // YYYY
-    else if (digits.length <= 6) out = digits.slice(0,4) + '-' + digits.slice(4); // YYYY-MM
-    else out = digits.slice(0,4) + '-' + digits.slice(4,6) + '-' + digits.slice(6); // YYYY-MM-DD
+    if (digits.length <= 4) out = digits;
+    else if (digits.length <= 6) out = digits.slice(0,4) + '-' + digits.slice(4);
+    else out = digits.slice(0,4) + '-' + digits.slice(4,6) + '-' + digits.slice(6);
     bdayEl.value = out;
   });
 
   function isValidDateISO(s){
     if(!/^\d{4}-\d{2}-\d{2}$/.test(s)) return false;
     const [y,m,d]=s.split('-').map(Number);
-    if(String(y).length!==4) return false;
     const dt=new Date(s);
     return dt instanceof Date && !isNaN(dt) &&
            dt.getUTCFullYear()===y && dt.getUTCMonth()+1===m && dt.getUTCDate()===d;
   }
 
-  /* 疑似乱数＆数秘 */
   function stringHash(str){let h=2166136261>>>0;for(let i=0;i<str.length;i++){h^=str.charCodeAt(i);h=Math.imul(h,16777619)>>>0;}return h>>>0;}
   function mulberry32(a){return function(){a|=0;a=(a+0x6D2B79F5)|0;let t=Math.imul(a^a>>>15,1|a);t=(t+Math.imul(t^t>>>7,61|t))^t;return ((t^t>>>14)>>>0)/4294967296;}}
   function seededRandom(seedStr){return mulberry32(stringHash(seedStr));}
   function digitalRoot(numStr){let s=numStr.replace(/\D/g,'').split('').reduce((a,b)=>a+Number(b),0);while(s>9){s=String(s).split('').reduce((a,b)=>a+Number(b),0);}return s||0;}
   function lifePathFromDate(isoDate){if(!isoDate)return 0;return digitalRoot(isoDate.replaceAll('-',''));}
-
-  /* ★出現確率：1=10%, 2=25%, 3=30%, 4=25%, 5=10% */
   const STAR_WEIGHTS=[0.10,0.25,0.30,0.25,0.10];
   function weightedChoice(rand){const r=rand();let acc=0;for(let i=0;i<STAR_WEIGHTS.length;i++){acc+=STAR_WEIGHTS[i];if(r<=acc)return i+1;}return 5;}
-
-  /* メッセージ */
   const BANK={
-    1:["無理は禁物。今日は休息優先。","焦りはミスのもと。深呼吸を忘れずに。","下準備が後の力に。土台を整える日に。","小さな失敗も学びの種。気にせず進もう。","ペースを落とすことで見える景色がある。","頑張らない勇気が心を守る。","空を見上げてリセットの時間を。","体を労わることが最高の運気アップ。","不調はメッセージ。自分を大切に。","足踏みしてもOK。今は溜める時期。"],
-    2:["ひと工夫で流れが変わる日。","小さな改善が未来を広げる。","周囲を観察するとヒントあり。","動くより考えることが吉。","ゆるやかに準備を進めると安心。","余裕を持つことで成果が安定。","計画を見直すと次がスムーズ。","人の話に耳を傾けると気づきあり。","焦らず、ひとつずつ積み重ねを。","小さな軌道修正が大きな前進に。"],
-    3:["いつも通りがベスト。","安定運。丁寧な行動が吉。","欲張らずシンプルに進めよう。","日常の中に小さな喜びがある。","穏やかに過ごすことが運気の鍵。","信頼できる人との時間が安心をくれる。","平常心を保てば物事が整う。","慣れたことを丁寧にこなして。","バランス感覚を意識すると吉。","流れに身を任せて穏やかに。"],
-    4:["思い切り動けば追い風が吹く。","迷ったら挑戦が正解。","努力が実を結びやすい日。","直感を信じて進もう。","小さな一歩が大きな未来につながる。","勇気を出せば可能性が広がる。","チャレンジする人を運が後押し。","行動することで新しい縁が生まれる。","自分の意思を示せば信頼が高まる。","少しの冒険が大きな収穫に。"],
-    5:["幸運MAX！行動すれば追い風。","願いが叶いやすい一日。","自信を持って進めば輝ける。","出会いや発見に恵まれる日。","喜びを分かち合うことでさらに好転。","チャンスが次々訪れる。逃さないで。","思い切った決断が成功につながる。","直感を信じて大胆に進めば吉。","努力が大きな実りとなる瞬間。","あなたの笑顔が幸運を引き寄せる。"]
+    1:["無理は禁物。今日は休息優先。","焦りはミスのもと。深呼吸を忘れずに。","下準備が後の力に。土台を整える日に。"],
+    2:["ひと工夫で流れが変わる日。","小さな改善が未来を広げる。","周囲を観察するとヒントあり。"],
+    3:["いつも通りがベスト。","安定運。丁寧な行動が吉。","欲張らずシンプルに進めよう。"],
+    4:["思い切り動けば追い風が吹く。","迷ったら挑戦が正解。","努力が実を結びやすい日。"],
+    5:["幸運MAX！行動すれば追い風。","願いが叶いやすい一日。","自信を持って進めば輝ける。"]
   };
 
-  function todayISOLocal(){
-    const now=new Date();
-    const y=now.getFullYear(), m=String(now.getMonth()+1).padStart(2,'0'), d=String(now.getDate()).padStart(2,'0');
-    return `${y}-${m}-${d}`;
-  }
+  function todayISOLocal(){const n=new Date();return `${n.getFullYear()}-${String(n.getMonth()+1).padStart(2,'0')}-${String(n.getDate()).padStart(2,'0')}`;}
   function starSymbols(n){ return "★★★★★".slice(0,n)+"☆☆☆☆☆".slice(0,5-n); }
 
-  function spawnSparks(aroundEl){
-    const rect = aroundEl.getBoundingClientRect();
-    const baseX = rect.left + rect.width * 0.8;
-    const baseY = rect.top + rect.height * 0.2;
-    const count = 6;
-    for(let i=0;i<count;i++){
-      const s = document.createElement('span');
-      s.className = 'spark';
-      const dx = (Math.random()*80 - 40) + 'px';
-      const dy = (-Math.random()*30 - 10) + 'px';
-      s.style.setProperty('--dx', dx);
-      s.style.setProperty('--dy', dy);
-      s.style.left = (baseX + window.scrollX) + 'px';
-      s.style.top  = (baseY + window.scrollY) + 'px';
-      document.body.appendChild(s);
-      setTimeout(()=> s.remove(), 800);
-    }
-  }
-
   function run(){
-    const bday = bdayEl.value.trim();
-    if(!isValidDateISO(bday)){
-      alert('誕生日は YYYY-MM-DD（例：1990-01-01）で入力してください。');
-      return;
-    }
+    const bday=bdayEl.value.trim();
+    if(!isValidDateISO(bday)){ alert('誕生日は YYYY-MM-DD（例：1990-01-01）で入力してください。'); return; }
     const lp=lifePathFromDate(bday);
     const today=todayISOLocal();
-    const seedStr=`${bday}|${today}`;
-    const rand=seededRandom(seedStr);
+    const rand=seededRandom(bday+"|"+today);
     const stars=weightedChoice(rand);
-    const idx=Math.floor(rand()*10);
+    const idx=Math.floor(rand()*BANK[stars].length);
     const msg=(BANK[stars]||[""])[idx]||"";
-
     document.getElementById('out').hidden=false;
-
-    const starsEl = document.getElementById('stars');
-    starsEl.textContent = starSymbols(stars);
-    starsEl.classList.remove('shine');
-    if(stars===5){ void starsEl.offsetWidth; starsEl.classList.add('shine'); spawnSparks(starsEl); }
-
-    document.getElementById('message').textContent = msg;
-    document.getElementById('meta').textContent = `誕生日: ${bday} / 数秘: ${lp} / 日付: ${today}`;
+    document.getElementById('stars').textContent=starSymbols(stars);
+    document.getElementById('message').textContent=msg;
+    document.getElementById('meta').textContent=`誕生日: ${bday} / 数秘: ${lp} / 日付: ${today}`;
   }
 
   goBtn.addEventListener('click', run);
-  bdayEl.addEventListener('keydown', e => { if(e.key==='Enter') run(); });
+  bdayEl.addEventListener('keydown', e=>{ if(e.key==='Enter') run(); });
 });
 </script>
 </body>
